sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/Fleet_Request__c.object-meta.xml
<CustomObject>
    <label>Fleet Request</label>
    <nameField>
        <displayFormat>Fleet-{0000}</displayFormat>
        <label>Fleet Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>