sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Count_of_Legs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Legs__c</fullName>
    <label>Count of Legs</label>
    <summaryForeignKey>Fleet_Requests__c.Fleet_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>