sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Pardot_Rating__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Rating__c</fullName>
    <description>Star Rating</description>
    <formula>IMAGE(
IF( Service_score__c &lt;= 2, &quot;/img/samples/stars_100.gif&quot;,
IF( Service_score__c &lt;= 4 &amp;&amp;  Service_score__c &gt; 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Service_score__c&lt;6 &amp;&amp;  Service_score__c &gt; 4, &quot;/img/samples/stars_300.gif&quot;,
IF(Service_score__c&lt;8 &amp;&amp;  Service_score__c &gt; 6, &quot;/img/samples/stars_400.gif&quot;,
IF(Service_score__c&lt;10 &amp;&amp;  Service_score__c &gt; 8, &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Star Rating</inlineHelpText>
    <label>Pardot Rating</label>
    <type>Text</type>
</CustomField>