sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Reason_For_Trip__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Trip__c</fullName>
    <label>Reason For Trip</label>
    <type>TextArea</type>
</CustomField>