sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Requesting_Department__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requesting Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Fleet Requests</relationshipLabel>
    <relationshipName>Fleet_Requests3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>