sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Requesting_Employee__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requesting Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Fleet Requests</relationshipLabel>
    <relationshipName>Fleet_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>