sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Service_score__c.field-meta.xml
<CustomField>
    <fullName>Service_score__c</fullName>
    <description>Rating of service on a scale of 1 - 10</description>
    <inlineHelpText>Rate the service on a scale of 1 - 10</inlineHelpText>
    <label>Service score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>