sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pending Quote</fullName>
            </value>
            <value>
                <fullName>Pending Team Lead Approval</fullName>
            </value>
            <value>
                <fullName>Team Lead Approved</fullName>
            </value>
            <value>
                <fullName>Bookings Confirmed</fullName>
            </value>
            <value>
                <fullName>Request Competed</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
                <isActive>false</isActive>
                <label>Request Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>