sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Total_Internal_Fleet_Cost_estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Fleet_Cost_estimate__c</fullName>
    <label>Total Internal Fleet Cost (Estimate)</label>
    <summarizedField>Fleet_Requests__c.Total_Estimated_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Fleet_Requests__c.Fleet_Request_Category__c</field>
        <operation>equals</operation>
        <value>Internal Fleet</value>
    </summaryFilterItems>
    <summaryForeignKey>Fleet_Requests__c.Fleet_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>