sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/fields/Total_Request_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Request_Cost__c</fullName>
    <formula>Total_External_Fleet_Cost_estimate__c +  Total_Internal_Fleet_Cost_estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Request Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>