sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/validationRules/Service_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Rating</fullName>
    <active>false</active>
    <description>Limit the rating to a scale of 1 - 10</description>
    <errorConditionFormula>OR(  Service_score__c &lt; 1,  Service_score__c &gt;10 )</errorConditionFormula>
    <errorDisplayField>Service_score__c</errorDisplayField>
    <errorMessage>Value has to be between 1 and 10.</errorMessage>
</ValidationRule>