sfSandBoxCode/force-app/main/default/objects/Fleet_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reason_For_Trip__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Requesting_Department__c</columns>
    <columns>Company__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Total_Request_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>